# euler-projects

./: .gitignore  README.md
pr10_get_many_primes/: CMakeLists.txt  main.c
pr11_read_diagonals_on_grid/: CMakeLists.txt  main.cpp
pr12_triangle_number/: CMakeLists.txt  main.cpp
pr13_large_sum/: CMakeLists.txt  main.cpp
pr14_longest_collatz_sequence/: CMakeLists.txt  main.cpp
pr15_lattice_paths/: CMakeLists.txt  main.cpp
pr16_power_digit_sum/: CMakeLists.txt  main.cpp
pr17_number_letter_counts/: CMakeLists.txt  main.cpp
pr18_maximum_path_sum/: CMakeLists.txt  main.cpp
pr19_counting_sundays/: CMakeLists.txt  main.cpp
pr1_multiples_3_5/: main.c
pr20_factorial_sum/: CMakeLists.txt  main.cpp
pr21_amicable_numbers/: CMakeLists.txt  main.cu
pr22_names_scores/: CMakeLists.txt  main.cu  output.txt
pr23_non-abundent_sums/: CMakeLists.txt  main.cu
pr24_lexographic_permutations/: CMakeLists.txt  main.cpp
pr24_lexographic_permutations_cuda/: CMakeLists.txt  main.cu
pr25_1000_digit_fib_number/: CMakeLists.txt  main.cu
pr26_reciprocal_cycles/: CMakeLists.txt  DevArray.cuh  main.cu
pr27_quadratic_primes/: CMakeLists.txt  DevArray.cuh  main.cu
pr28_spiral_diagonals/: CMakeLists.txt  main.cu
pr29_distinct_powers/: CMakeLists.txt  main.cu
pr2_even_fib_nums/: CMakeLists.txt  main.c
pr30_digit_fifth_powers/: CMakeLists.txt  DevArray.cuh  main.cu
pr31_coin_sums/: .gitignore  dub.json
pr32_pandigital_products/: .gitignore  dub.json
pr33_digit_cancelling_fractions/: .gitignore  dub.json
pr34_digit_factorials/: .gitignore  dub.json
(+74 files in other folders)
